--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <body>
     <header>
       <nav class="navigation">
-        <ul class="list">
+        <ul class="list-header list">
           <li class="list-link"><a href="./index.html">Home</a></li>
           <li class="list-link"><a href="./video.html">Instructional video</a></li>
+          <li class="list-link"><a href="./pencode.html">Pen Code</a></li>
         </ul>
       </nav>
     </header>
@@ -413,6 +414,45 @@
               >
             </td>
             <td>Box Shadow CSS Generator</td>
+          </tr>
+          <tr>
+            <td>31</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://projects.verou.me/conic-gradient/"
+                >CSS conic-gradient() polyfill
+                </a
+              >
+            </td>
+            <td>CSS conic-gradient() polyfill</td>
+          </tr>
+          <tr>
+            <td>32</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://icomoon.io/app/#/select"
+                >icomoon.io
+                </a
+              >
+            </td>
+            <td>Набір іконок svg</td>
+          </tr>
+          <tr>
+            <td>33</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://www.figma.com/file/05Sj5gmJE4Hiv4wpgXsPE5/Templates-%234.-More-on-Figma.info-(Copy)?node-id=0%3A1"
+                >Новий проект Figma
+                </a
+              >
+            </td>
+            <td>Новий проект Figma</td>
           </tr>
         </tbody>
       </table>
