--- a/video.html
+++ b/video.html
@@ -10,11 +10,12 @@
   <body>
     <header>
       <nav class="navigation">
-        <ul class="list">
+        <ul class="list-header list">
           <li class="list-link"><a href="./index.html">Home</a></li>
           <li class="list-link">
             <a href="./video.html">Instructional video</a>
           </li>
+          <li class="list-link"><a href="./pencode.html">Pen Code</a></li>
         </ul>
       </nav>
     </header>
