--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
     <header>
       <nav class="navigation">
         <ul class="list-header list">
-          <li class="list-link"><a href="./index.html">Home</a></li>
-          <li class="list-link"><a href="./video.html">Instructional video</a></li>
-          <li class="list-link"><a href="./pencode.html">Pen Code</a></li>
+          <li class="list-item"><a href="./index.html" class="list-link"><svg width="15" height="15" class="icon-before">
+                <use xlink:href="./price.svg#icon-before1"></use>
+              </svg>Home<svg width="15" height="15" class="icon-before1">
+                <use xlink:href="./price.svg#icon-before2"></use>
+              </svg></a></li>
+          <li class="list-item">
+            <a href="./video.html" class="list-link">Instructional video</a>
+          </li>
+          <li class="list-item"><a href="./pencode.html" class="list-link">Pen Code</a></li>
         </ul>
       </nav>
     </header>
