--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header>
       <nav class="navigation">
         <ul class="list-header list">
-          <li class="list-item"><a href="./index.html" class="list-link"><svg width="15" height="15" class="icon-before">
+          <li class="list-item"><a href="./index.html" class="list-link-home linkheader"><svg width="15" height="15" class="icon-before1">
                 <use xlink:href="./price.svg#icon-before1"></use>
-              </svg>Home<svg width="15" height="15" class="icon-before1">
+              </svg>Home<svg width="15" height="15" class="icon-before2">
                 <use xlink:href="./price.svg#icon-before2"></use>
               </svg></a></li>
           <li class="list-item">
-            <a href="./video.html" class="list-link">Instructional video</a>
+            <a href="./video.html" class="list-link-video linkheader">Instructional video</a>
           </li>
-          <li class="list-item"><a href="./pencode.html" class="list-link">Pen Code</a></li>
+          <li class="list-item"><a href="./pencode.html" class="list-link-pen linkheader">Pen Code</a></li>
         </ul>
       </nav>
     </header>
@@ -459,6 +459,97 @@
               >
             </td>
             <td>Новий проект Figma</td>
+          </tr>
+          <tr>
+            <td>34</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://stackoverflow.com/questions/14731049/visibilityhidden-vs-displaynone-vs-opacity0"
+                >visibility:hidden vs display:none vs opacity:0
+                </a
+              >
+            </td>
+            <td>Ріхниця між hidden,display:none,opacity:0 </td>
+          </tr>
+          <tr>
+            <td>35</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://3dtransforms.desandro.com/card-flip"
+                >Intro to CSS 3D transforms
+                </a
+              >
+            </td>
+            <td>Анімація 3D transforms</td>
+          </tr>
+          <tr>
+          <td>36</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://habr.com/ru/post/126207/"
+                >Геометрические фигуры на CSS
+                </a
+              >
+            </td>
+            <td>Геометрічні фігури на CSS</td>
+          </tr>
+          <tr>
+          <td>37</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://animate.style/"
+                >Animate.css
+                </a
+              >
+            </td>
+            <td>Сайт додавання стилів анімації</td>
+          </tr>
+          <tr>
+          <td>38</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="http://apps.eky.hk/css-triangle-generator/"
+                >CSS triangle generator
+                </a
+              >
+            </td>
+            <td>генератор трикутників</td>
+          </tr>
+           <tr>
+          <td>39</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://cubic-bezier.com/#.17,.67,.83,.67"
+                >cubic-bezier
+                </a
+              >
+            </td>
+            <td>генератор cubic-bezier</td>
+          </tr>
+          <tr>
+          <td>40</td>
+            <td>
+              <a
+                class="link"
+                target="_blank"
+                href="https://michalsnik.github.io/aos/"
+                >AOS
+                </a
+              >
+            </td>
+            <td>сайт наборів випливаючи вікон</td>
           </tr>
         </tbody>
       </table>
