--- a/pencode.html
+++ b/pencode.html
@@ -11,11 +11,15 @@
     <header>
       <nav class="navigation">
         <ul class="list-header list">
-          <li class="list-item"><a href="./index.html" class="list-link">Home</a></li>
+          <li class="list-item"><a href="./index.html" class="list-link-home linkheader"><svg width="15" height="15" class="icon-before1">
+                <use xlink:href="./price.svg#icon-before1"></use>
+              </svg>Home<svg width="15" height="15" class="icon-before2">
+                <use xlink:href="./price.svg#icon-before2"></use>
+              </svg></a></li>
           <li class="list-item">
-            <a href="./video.html" class="list-link">Instructional video</a>
+            <a href="./video.html" class="list-link-video linkheader">Instructional video</a>
           </li>
-          <li class="list-item"><a href="./pencode.html" class="list-link">Pen Code</a></li>
+          <li class="list-item"><a href="./pencode.html" class="list-link-pen linkheader">Pen Code</a></li>
         </ul>
       </nav>
     </header>
