--- a/index.html
+++ b/index.html
@@ -11,15 +11,27 @@
     <header>
       <nav class="navigation">
         <ul class="list-header list">
-          <li class="list-item"><a href="./index.html" class="list-link-home linkheader"><svg width="15" height="15" class="icon-before1">
-                <use xlink:href="./price.svg#icon-before1"></use>
-              </svg>Home<svg width="15" height="15" class="icon-before2">
-                <use xlink:href="./price.svg#icon-before2"></use>
-              </svg></a></li>
           <li class="list-item">
-            <a href="./video.html" class="list-link-video linkheader">Instructional video</a>
+            <a href="./index.html" class="list-link-home linkheader"
+              ><svg width="15" height="15" class="icon-before1">
+                <use xlink:href="./price.svg#icon-before1"></use>
+              </svg>
+              Home
+              <svg width="15" height="15" class="icon-before2">
+                <use xlink:href="./price.svg#icon-before2"></use>
+              </svg>
+            </a>
           </li>
-          <li class="list-item"><a href="./pencode.html" class="list-link-pen linkheader">Pen Code</a></li>
+          <li class="list-item">
+            <a href="./video.html" class="list-link-video linkheader"
+              >Instructional video</a
+            >
+          </li>
+          <li class="list-item">
+            <a href="./pencode.html" class="list-link-pen linkheader"
+              >Pen Code</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -42,11 +54,14 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://github.com/yoksel/common-words" rel="noopener norefferer nofollow"
+                href="https://github.com/yoksel/common-words"
+                rel="noopener norefferer nofollow"
                 >Слова, часто используемые в CSS-классах</a
               >
-            </td class="table-list">
-            <td class="table-list">Слова які використовуються для класів CSS</td>
+            </td>
+            <td class="table-list">
+              Слова які використовуються для класів CSS
+            </td>
           </tr>
           <tr>
             <td>2</td>
@@ -54,7 +69,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://github.com/nicothin/idiomatic-pre-CSS/blob/gh-pages/words_and_abbreviations.md" rel="noopener norefferer nofollow"
+                href="https://github.com/nicothin/idiomatic-pre-CSS/blob/gh-pages/words_and_abbreviations.md"
+                rel="noopener norefferer nofollow"
                 >Слова и сокращения в CSS-классах</a
               >
             </td>
@@ -66,7 +82,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://htmlcolorcodes.com/color-picker/" rel="noopener norefferer nofollow"
+                href="https://htmlcolorcodes.com/color-picker/"
+                rel="noopener norefferer nofollow"
                 >Color Picker</a
               >
             </td>
@@ -78,7 +95,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://htmlcolorcodes.com/color-names/" rel="noopener norefferer nofollow"
+                href="https://htmlcolorcodes.com/color-names/"
+                rel="noopener norefferer nofollow"
                 >Red HTML Color Names</a
               >
             </td>
@@ -90,7 +108,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://ymatuhin.ru/front-end/font-display/" rel="noopener norefferer nofollow"
+                href="https://ymatuhin.ru/front-end/font-display/"
+                rel="noopener norefferer nofollow"
                 >Управляем поведением font-face в CSS</a
               >
             </td>
@@ -102,7 +121,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://unicode-table.com/en/" rel="noopener norefferer nofollow"
+                href="https://unicode-table.com/en/"
+                rel="noopener norefferer nofollow"
                 >Unicode Character Table</a
               >
             </td>
@@ -114,7 +134,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="http://foxtools.ru/Unicode" rel="noopener norefferer nofollow"
+                href="http://foxtools.ru/Unicode"
+                rel="noopener norefferer nofollow"
                 >Таблица символов Юникода</a
               >
             </td>
@@ -126,7 +147,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://html.spec.whatwg.org/multipage/semantics.html#the-meta-element" rel="noopener norefferer nofollow"
+                href="https://html.spec.whatwg.org/multipage/semantics.html#the-meta-element"
+                rel="noopener norefferer nofollow"
                 >HTML</a
               >
             </td>
@@ -135,7 +157,11 @@
           <tr>
             <td>9</td>
             <td>
-              <a class="link" target="_blank" href="https://cssreference.io/" rel="noopener norefferer nofollow"
+              <a
+                class="link"
+                target="_blank"
+                href="https://cssreference.io/"
+                rel="noopener norefferer nofollow"
                 >CSS Reference type</a
               >
             </td>
@@ -144,7 +170,11 @@
           <tr>
             <td>10</td>
             <td>
-              <a class="link" target="_blank" href="https://htmlreference.io/" rel="noopener norefferer nofollow"
+              <a
+                class="link"
+                target="_blank"
+                href="https://htmlreference.io/"
+                rel="noopener norefferer nofollow"
                 >HTML Reference type</a
               >
             </td>
@@ -156,7 +186,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://google-webfonts-helper.herokuapp.com/fonts" rel="noopener norefferer nofollow"
+                href="https://google-webfonts-helper.herokuapp.com/fonts"
+                rel="noopener norefferer nofollow"
                 >google-webfonts-helper</a
               >
             </td>
@@ -165,7 +196,11 @@
           <tr>
             <td>12</td>
             <td>
-              <a class="link" target="_blank" href="https://fonts.google.com/" rel="noopener norefferer nofollow"
+              <a
+                class="link"
+                target="_blank"
+                href="https://fonts.google.com/"
+                rel="noopener norefferer nofollow"
                 >Google Fonts</a
               >
             </td>
@@ -177,7 +212,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://developer.mozilla.org/ru/docs/Web/CSS/background-image" rel="noopener norefferer nofollow"
+                href="https://developer.mozilla.org/ru/docs/Web/CSS/background-image"
+                rel="noopener norefferer nofollow"
                 >MDN Plus</a
               >
             </td>
@@ -189,7 +225,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://www.edu.goit.global/uk/learn/6081611/845990/845996/textbook" rel="noopener norefferer nofollow"
+                href="https://www.edu.goit.global/uk/learn/6081611/845990/845996/textbook"
+                rel="noopener norefferer nofollow"
                 >GO-IT</a
               >
             </td>
@@ -201,7 +238,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://w3schoolsua.github.io/html/html_id.html" rel="noopener norefferer nofollow"
+                href="https://w3schoolsua.github.io/html/html_id.html"
+                rel="noopener norefferer nofollow"
                 >НАЙКРАЩИЙ САЙТ ДЛЯ ВЕБ-РОЗРОБНИКІВ</a
               >
             </td>
@@ -213,7 +251,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://validator.w3.org/#validate_by_input" rel="noopener norefferer nofollow"
+                href="https://validator.w3.org/#validate_by_input"
+                rel="noopener norefferer nofollow"
                 >Validate by direct input</a
               >
             </td>
@@ -225,12 +264,12 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://www.figma.com/file/GcmvdEcj62S0cIIPUYuC4E/Wireframing-in-Figma?node-id=0%3A817" rel="noopener norefferer nofollow"
+                href="https://www.figma.com/file/GcmvdEcj62S0cIIPUYuC4E/Wireframing-in-Figma?node-id=0%3A817"
+                rel="noopener norefferer nofollow"
                 >Figma</a
               >
             </td>
             <td>GO-IT Учбовий проект</td>
-          </tr>
           </tr>
           <tr>
             <td>17</td>
@@ -238,7 +277,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://www.figma.com/file/1ehrLBauvVFu4mVhxsHzyZ/Web-Studio-(Version-2.1)?node-id=0%3A1" rel="noopener norefferer nofollow"
+                href="https://www.figma.com/file/1ehrLBauvVFu4mVhxsHzyZ/Web-Studio-(Version-2.1)?node-id=0%3A1"
+                rel="noopener norefferer nofollow"
                 >Figma 1 homework</a
               >
             </td>
@@ -250,7 +290,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://www.figma.com/file/z6Rb84e4NKxe66QNokOWA8/Barbershop-EN?node-id=1374%3A32" rel="noopener norefferer nofollow"
+                href="https://www.figma.com/file/z6Rb84e4NKxe66QNokOWA8/Barbershop-EN?node-id=1374%3A32"
+                rel="noopener norefferer nofollow"
                 >Figma Barbershop</a
               >
             </td>
@@ -262,12 +303,12 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://getbootstrap.com/docs/5.2/getting-started/introduction/" rel="noopener norefferer nofollow"
+                href="https://getbootstrap.com/docs/5.2/getting-started/introduction/"
+                rel="noopener norefferer nofollow"
                 >Get started with Bootstrap</a
               >
             </td>
             <td>Готові тегі з класами</td>
-          </tr>
           </tr>
           <tr>
             <td>20</td>
@@ -275,13 +316,12 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://jakearchibald.github.io/svgomg/" rel="noopener norefferer nofollow"
+                href="https://jakearchibald.github.io/svgomg/"
+                rel="noopener norefferer nofollow"
                 >SVGOMG</a
               >
             </td>
             <td>Конвертація SVG</td>
-          </tr>
-          </tr>
           </tr>
           <tr>
             <td>21</td>
@@ -289,7 +329,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://devhints.io/css-system-font-stack" rel="noopener norefferer nofollow"
+                href="https://devhints.io/css-system-font-stack"
+                rel="noopener norefferer nofollow"
                 >CSS system fonts cheatsheet</a
               >
             </td>
@@ -301,7 +342,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://github.com/web-standards-ru/dictionary/blob/main/dictionary.md" rel="noopener norefferer nofollow"
+                href="https://github.com/web-standards-ru/dictionary/blob/main/dictionary.md"
+                rel="noopener norefferer nofollow"
                 >Словарь терминов по фронтенду</a
               >
             </td>
@@ -313,7 +355,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://code.tutsplus.com/ru/tutorials/the-30-css-selectors-you-must-memorize--net-16048" rel="noopener norefferer nofollow"
+                href="https://code.tutsplus.com/ru/tutorials/the-30-css-selectors-you-must-memorize--net-16048"
+                rel="noopener norefferer nofollow"
                 >30 CSS</a
               >
             </td>
@@ -325,7 +368,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://www.w3schools.com/cssref/css_websafe_fonts.asp" rel="noopener norefferer nofollow"
+                href="https://www.w3schools.com/cssref/css_websafe_fonts.asp"
+                rel="noopener norefferer nofollow"
                 >CSS Web Safe Fonts</a
               >
             </td>
@@ -337,7 +381,8 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://squoosh.app/" rel="noopener norefferer nofollow"
+                href="https://squoosh.app/"
+                rel="noopener norefferer nofollow"
                 >Squoosh</a
               >
             </td>
@@ -349,10 +394,10 @@
               <a
                 class="link"
                 target="_blank"
-                href="https://github.com/sindresorhus/modern-normalize" rel="noopener norefferer nofollow"
+                href="https://github.com/sindresorhus/modern-normalize"
+                rel="noopener norefferer nofollow"
                 >modern-normalize
-                </a
-              >
+              </a>
             </td>
             <td>Нормолізатор CSS</td>
           </tr>
@@ -364,21 +409,16 @@
                 target="_blank"
                 href="https://nthchild.kawalekkodu.pl/en/"
                 >Child Generator - click and get CSS nth-child formula!
-                </a
-              >
+              </a>
             </td>
             <td>Child генератор</td>
           </tr>
           <tr>
             <td>28</td>
             <td>
-              <a
-                class="link"
-                target="_blank"
-                href="https://cssgradient.io/"
+              <a class="link" target="_blank" href="https://cssgradient.io/"
                 >CSS Gradient
-                </a
-              >
+              </a>
             </td>
             <td>CSS Gradient</td>
           </tr>
@@ -390,8 +430,7 @@
                 target="_blank"
                 href="https://uigradients.com/#Mantle"
                 >CSS Gradient
-                </a
-              >
+              </a>
             </td>
             <td>CSS Gradient</td>
           </tr>
@@ -403,8 +442,7 @@
                 target="_blank"
                 href="https://projects.verou.me/conic-gradient/"
                 >CSS conic-gradient() polyfill
-                </a
-              >
+              </a>
             </td>
             <td>CSS conic-gradient() polyfill</td>
           </tr>
@@ -416,8 +454,7 @@
                 target="_blank"
                 href="https://cssgenerator.org/box-shadow-css-generator.html"
                 >Box Shadow CSS Generator
-                </a
-              >
+              </a>
             </td>
             <td>Box Shadow CSS Generator</td>
           </tr>
@@ -429,8 +466,7 @@
                 target="_blank"
                 href="https://projects.verou.me/conic-gradient/"
                 >CSS conic-gradient() polyfill
-                </a
-              >
+              </a>
             </td>
             <td>CSS conic-gradient() polyfill</td>
           </tr>
@@ -442,8 +478,7 @@
                 target="_blank"
                 href="https://icomoon.io/app/#/select"
                 >icomoon.io
-                </a
-              >
+              </a>
             </td>
             <td>Набір іконок svg</td>
           </tr>
@@ -455,8 +490,7 @@
                 target="_blank"
                 href="https://www.figma.com/file/05Sj5gmJE4Hiv4wpgXsPE5/Templates-%234.-More-on-Figma.info-(Copy)?node-id=0%3A1"
                 >Новий проект Figma
-                </a
-              >
+              </a>
             </td>
             <td>Новий проект Figma</td>
           </tr>
@@ -468,10 +502,9 @@
                 target="_blank"
                 href="https://stackoverflow.com/questions/14731049/visibilityhidden-vs-displaynone-vs-opacity0"
                 >visibility:hidden vs display:none vs opacity:0
-                </a
-              >
+              </a>
             </td>
-            <td>Ріхниця між hidden,display:none,opacity:0 </td>
+            <td>Ріхниця між hidden,display:none,opacity:0</td>
           </tr>
           <tr>
             <td>35</td>
@@ -481,75 +514,66 @@
                 target="_blank"
                 href="https://3dtransforms.desandro.com/card-flip"
                 >Intro to CSS 3D transforms
-                </a
-              >
+              </a>
             </td>
             <td>Анімація 3D transforms</td>
           </tr>
           <tr>
-          <td>36</td>
+            <td>36</td>
             <td>
               <a
                 class="link"
                 target="_blank"
                 href="https://habr.com/ru/post/126207/"
                 >Геометрические фигуры на CSS
-                </a
-              >
+              </a>
             </td>
             <td>Геометрічні фігури на CSS</td>
           </tr>
           <tr>
-          <td>37</td>
+            <td>37</td>
             <td>
-              <a
-                class="link"
-                target="_blank"
-                href="https://animate.style/"
+              <a class="link" target="_blank" href="https://animate.style/"
                 >Animate.css
-                </a
-              >
+              </a>
             </td>
             <td>Сайт додавання стилів анімації</td>
           </tr>
           <tr>
-          <td>38</td>
+            <td>38</td>
             <td>
               <a
                 class="link"
                 target="_blank"
                 href="http://apps.eky.hk/css-triangle-generator/"
                 >CSS triangle generator
-                </a
-              >
+              </a>
             </td>
             <td>генератор трикутників</td>
           </tr>
-           <tr>
-          <td>39</td>
+          <tr>
+            <td>39</td>
             <td>
               <a
                 class="link"
                 target="_blank"
                 href="https://cubic-bezier.com/#.17,.67,.83,.67"
                 >cubic-bezier
-                </a
-              >
+              </a>
             </td>
             <td>генератор cubic-bezier</td>
           </tr>
           <tr>
-          <td>40</td>
+            <td>40</td>
             <td>
               <a
                 class="link"
                 target="_blank"
-                href="https://michalsnik.github.io/aos/"
-                >AOS
-                </a
-              >
+                href="https://autoprefixer.github.io/ru/"
+                >Автопрефиксер CSS онлайн
+              </a>
             </td>
-            <td>сайт наборів випливаючи вікон</td>
+            <td>Сайт перевірка автопрефіксів</td>
           </tr>
         </tbody>
       </table>
