--- a/pencode.html
+++ b/pencode.html
@@ -45,7 +45,7 @@
                 href="https://codepen.io/mpadalko/pen/qBYZPPr?editors=1100" rel="noopener norefferer nofollow"
                 >Flex conteiner</a
               >
-            </td class="table-list">
+            </td>
             <td class="table-list">Flex conteiner</td>
           </tr>
           <tr class="table-tags">
@@ -57,7 +57,7 @@
                 href="https://codepen.io/mpadalko/pen/YzLZLPr?editors=1100" rel="noopener norefferer nofollow"
                 >Накладення фото на інше</a
               >
-            </td class="table-list">
+            </td>
             <td class="table-list">Накладення фото на інше</td>
           </tr>
           <tr class="table-tags">
@@ -69,7 +69,7 @@
                 href="https://codepen.io/mpadalko/pen/PoQgdGM?editors=1100" rel="noopener norefferer nofollow"
                 >Shadow-text</a
               >
-            </td class="table-list">
+            </td>
             <td class="table-list">Shadow-text</td>
           </tr>
           <tr class="table-tags">
@@ -81,7 +81,7 @@
                 href="https://codepen.io/mpadalko/pen/QWrpENr?editors=1100" rel="noopener norefferer nofollow"
                 >Вирівнювання іконкі з силкою по вертікалі </a
               >
-            </td class="table-list">
+            </td>
             <td class="table-list">Вирівнювання іконкі з силкою по вертікалі</td>
           </tr>
           <tr class="table-tags">
@@ -93,7 +93,7 @@
                 href="https://codepen.io/mpadalko/pen/oNzQoZb?editors=1100" rel="noopener norefferer nofollow"
                 >Приклад зі зміною розташуванням елементів border </a
               >
-            </td class="table-list">
+            </td>
             <td class="table-list">Приклад зі зміною розташуванням елементів border</td>
           </tr>
           <tr class="table-tags">
@@ -105,7 +105,7 @@
                 href="https://codepen.io/KittyGiraudel/pen/nLRpaY" rel="noopener norefferer nofollow"
                 >Flex conteiner</a
               >
-            </td class="table-list">
+            </td>
             <td class="table-list">Flex conteiner</td>
           </tr>
           <tr class="table-tags">
@@ -115,10 +115,10 @@
                 class="link"
                 target="_blank"
                 href="https://codepen.io/mpadalko/pen/PoebBVX?editors=1100" rel="noopener norefferer nofollow"
-                >Розташування малунка з бордером</a
+                >Розташування малюнка з бордером</a
               >
-            </td class="table-list">
-            <td class="table-list">Розташування малунка з бордером</td>
+            </td>
+            <td class="table-list">Розташування малюнка з бордером</td>
           </tr>
           <tr class="table-tags">
           <td class="table-list">7</td>
@@ -129,8 +129,8 @@
                 href="https://codepen.io/mpadalko/pen/vYjyaqa?editors=1100" rel="noopener norefferer nofollow"
                 >hover з зислкою та іконкою</a
               >
-            </td class="table-list">
-            <td class="table-list">hover з зислкою та іконкою</td>
+            </td>
+            <td class="table-list">hover з сислкою та іконкою</td>
           </tr>
           <tr class="table-tags">
           <td class="table-list">8</td>
@@ -141,8 +141,57 @@
                 href="https://codepen.io/mpadalko/pen/JjvWPKm?editors=1100" rel="noopener norefferer nofollow"
                 >Прапор України</a
               >
-            </td class="table-list">
+            </td>
             <td class="table-list">Прапор України</td>
           </tr>
+          <tr class="table-tags">
+          <td class="table-list">9</td>
+            <td class="table-list">
+              <a
+                class="link"
+                target="_blank"
+                href="https://codepen.io/mpadalko/pen/JjvvMoE?editors=1100" rel="noopener norefferer nofollow"
+                >Change placeholder color on input focus</a
+              >
+            </td>
+            <td class="table-list">Зміна фокусу input and plasholder</td>
+          </tr>
+          <tr class="table-tags">
+          <td class="table-list">10</td>
+            <td class="table-list">
+              <a
+                class="link"
+                target="_blank"
+                href="https://codepen.io/mpadalko/pen/eYreJEL" rel="noopener norefferer nofollow"
+                >modal GoIT</a
+              >
+            </td>
+            <td class="table-list">створення Modal вікна</td>
+          </tr>
+          <tr class="table-tags">
+          <td class="table-list">11</td>
+            <td class="table-list">
+              <a
+                class="link"
+                target="_blank"
+                href="https://codepen.io/mpadalko/pen/JjbErPB?editors=1100" rel="noopener norefferer nofollow"
+                >CodePen Home CSS Heart Animation</a
+              >
+            </td>
+            <td class="table-list">Анімація Heart</td>
+          </tr>
+          <tr class="table-tags">
+          <td class="table-list">12</td>
+            <td class="table-list">
+              <a
+                class="link"
+                target="_blank"
+                href="https://codepen.io/mpadalko/pen/GRWEWMZ?editors=1100" rel="noopener norefferer nofollow"
+                >social rotate</a
+              >
+            </td>
+            <td class="table-list">Анімація іконок соціальних джерел</td>
+          </tr>
+      </main>
   </body>
 </html>
