--- a/video.html
+++ b/video.html
@@ -14,10 +14,12 @@
           <li class="list-item">
             <a href="./index.html" class="list-link-home linkheader"
               ><svg width="15" height="15" class="icon-before1">
-                <use xlink:href="./price.svg#icon-before1"></use></svg
-              >Home<svg width="15" height="15" class="icon-before2">
-                <use xlink:href="./price.svg#icon-before2"></use></svg
-            ></a>
+                <use xlink:href="./price.svg#icon-before1"></use>
+              </svg>
+              Home<svg width="15" height="15" class="icon-before2">
+                <use xlink:href="./price.svg#icon-before2"></use>
+              </svg>
+            </a>
           </li>
           <li class="list-item">
             <a href="./video.html" class="list-link-video linkheader"
