--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The bast link</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="shortcut icon" type="image-jpg" href="/icon-the-best-link.jpg" />
   </head>
   <body>
     <header>
       <nav class="navigation">
-        <ul class="list-header list">
-          <li class="list-item">
+        <ul class="navigation__list list">
+          <li class="navigation__item">
             <a href="./index.html" class="list-link-home linkheader"
               ><svg width="15" height="15" class="icon-before1">
                 <use xlink:href="./price.svg#icon-before1"></use>
@@ -22,12 +23,12 @@
               </svg>
             </a>
           </li>
-          <li class="list-item">
+          <li class="navigation__item">
             <a href="./video.html" class="list-link-video linkheader"
               >Instructional video</a
             >
           </li>
-          <li class="list-item">
+          <li class="navigation__item">
             <a href="./pencode.html" class="list-link-pen linkheader"
               >Pen Code</a
             >
