--- a/video.html
+++ b/video.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The bast link</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="shortcut icon" type="image-jpg" href="/icon-the-best-link.jpg" />
   </head>
   <body>
     <header>
